--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "pm2-s",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "pm2 顺序执行插件",
   "main": "index.js",
   "bin": {
     "pm2-s": "bin/pm2-s-cli.js"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/eminoda/pm2-s.git"
